--- a/pentagram/firebase.json
+++ b/pentagram/firebase.json
@@ -1,36 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "pentagram-smt5",
-          "appId": "1:909346740133:android:dd8262e93df31a382c7a4c",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "pentagram-smt5",
-          "configurations": {
-            "android": "1:909346740133:android:dd8262e93df31a382c7a4c",
-            "ios": "1:909346740133:ios:36c5c4a9a59c88082c7a4c",
-            "macos": "1:909346740133:ios:36c5c4a9a59c88082c7a4c",
-            "web": "1:909346740133:web:dec8e7fd302600c22c7a4c",
-            "windows": "1:909346740133:web:557512721af327992c7a4c"
-          }
-        }
-      }
-    }
-  },
-  "hosting": {
-    "source": ".",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "frameworksBackend": {
-      "region": "asia-east1"
-    }
-  }
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"gen-lang-client-0559167490","appId":"1:389190829565:android:9e53265a8df31008e84594","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"gen-lang-client-0559167490","configurations":{"android":"1:389190829565:android:9e53265a8df31008e84594","ios":"1:389190829565:ios:78f649931da8b945e84594","macos":"1:389190829565:ios:78f649931da8b945e84594","web":"1:389190829565:web:7fb480c2cc7ae51be84594","windows":"1:389190829565:web:8bd06c0bc42952b6e84594"}}}}},"hosting":{"source":".","ignore":["firebase.json","**/.*","**/node_modules/**"],"frameworksBackend":{"region":"asia-east1"}}}
