--- a/pentagram/pubspec.yaml
+++ b/pentagram/pubspec.yaml
@@ -18,8 +18,11 @@ dependencies:
   google_fonts: ^6.2.1
   fl_chart: 1.0.0
   firebase_core: ^4.2.0
+  firebase_auth: ^6.1.2
   intl: ^0.20.2
   flutter_riverpod: ^2.3.6
+  cloud_firestore: ^6.1.0
+  firebase_database: ^12.1.0
 
 dev_dependencies:
   flutter_test:
