--- a/pentagram/pubspec.yaml
+++ b/pentagram/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   image_picker: ^1.0.7
   permission_handler: ^11.3.0
   image: ^4.1.7
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
