--- a/pentagram/pubspec.yaml
+++ b/pentagram/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   permission_handler: ^11.3.0
   image: ^4.1.7
   http: ^1.2.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
