--- a/pentagram/pubspec.yaml
+++ b/pentagram/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   image: ^4.1.7
   http: ^1.2.0
   shared_preferences: ^2.2.2
+  flutter_launcher_icons: ^0.13.1
+
 
 dev_dependencies:
   flutter_test:
@@ -47,3 +49,7 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_icon.png"
