--- a/pentagram/.github/workflows/firebase-hosting-merge.yml
+++ b/pentagram/.github/workflows/firebase-hosting-merge.yml
@@ -29,8 +29,8 @@ jobs:
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PENTAGRAM_SMT5 }}
-          projectId: pentagram-smt5
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_GEN_LANG_CLIENT_0559167490 }}
+          projectId: gen-lang-client-0559167490
           channelId: live
         env:
           FIREBASE_CLI_EXPERIMENTS: webframeworks
