Fix : permission save after login

--- a/pentagram/firebase.json
+++ b/pentagram/firebase.json
@@ -58,6 +58,17 @@
         "firebase-debug.*.log",
         "functions"
       ]
+    },
+    {
+      "backendId": "backend",
+      "rootDir": "/",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "functions"
+      ]
     }
   ]
 }
